# Sources/Api/DTO/ImportBatch+DTO.swift
@@ -2,12 +2,11 @@ import Vapor
 
 /// DTO namespace for ImportBatch endpoints
 public enum ImportBatchDTO {
-    /// Input payload for timesheet upload
-    public struct UploadInput: Content, Validatable {
-        public var file: File
-        public var filename: String?
-        public var uploadedBy: String?
+        /// Input payload for timesheet upload
+        public struct UploadInput: Content, Validatable {
+                /// Identifier of the file previously uploaded to aml.file
+                public var fileID: UUID
 
-        public static func validations(_ validations: inout Validations) {}
-    }
+                public static func validations(_ validations: inout Validations) {}
+        }
 }
